# ML-Job-Application-Tracker

./: .env.example  .gitignore  PROFILE.example.md  PROFILE.md  README.md  RESUME.example.md  RESUME.md  analyzer.py  app.py  build_ui.py  db.py  linkedin_login.py  login.py  main.py  models.py  pyproject.toml  requirements.txt  resume_optimizer.py  scrape.py  scraper.py  serve.py  token.save  vicare_test.py
scrapers/: __init__.py  base.py  browser.py  indeed.py  linkedin.py  remoterocketship.py  stepstone.py
src/: analyzer.py  build_ui.py  db.py  flowcv_automation.py  job_importer.py  models.py  resume_optimizer.py
src/scrapers/: __init__.py  base.py  browser.py  indeed.py  linkedin.py  remoterocketship.py  stepstone.py
templates/: applications.html  cover_letter.html
tests/: test_application_duplicates.py  test_applications_template.py  test_build_ui.py  test_cover_letter_pdf.py  test_db_migration.py  test_flowcv_automation.py  test_generation_guidance.py  test_resume_optimizer.py  test_server_startup.py
