[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job-listing-scraper"
version = "0.1.0"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["analyzer", "build_ui", "db", "models", "resume_optimizer"]
