[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "job-listing-scraper"
version = "0.1.0"
dependencies = [
    "flask>=3.0",
    "google-genai>=1.0.0",
    "openai>=2.0.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "html-to-markdown>=3.6.5",
    "requests>=2.31.0",
    "cloudscraper>=2.3.7",
    "pydantic>=2.0.0",
    "playwright>=1.44.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["analyzer", "build_ui", "db", "models", "resume_optimizer"]

[tool.pytest.ini_options]
pythonpath = ["."]
